--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -5,4 +5,4 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: "Good_Driver_Program.wsgi:application"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static/: "static/"
+    /static/: "/static/"
