--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,3 +7,10 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: /static
     /public: /public
+container_commands:
+  01_makemigrations:
+    command: "python3 manage.py makemigrations"
+    leader_only: true
+  02_migrate:
+    command: "python3 manage.py migrate"
+    leader_only: true
