--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,3 +7,6 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: /static
     /public: /public
+packages:
+  yum:
+    MySQL-python: []
